<resources>
    <string name="app_name">NavigationViewDemo</string>
    <string name="navigation_subheader">Sub items</string>
    <string name="navigation_sub_item_1">Sub item 1</string>
    <string name="navigation_sub_item_2">Sub item 2</string>
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_message">Message</string>
    <string name="navigation_item_friends">Friends</string>
    <string name="navigation_item_discussion">Discussion</string>
</resources>
