<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_item_home" />
        <item
            android:id="@+id/navigation_item_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/navigation_item_message" />
        <item
            android:id="@+id/navigation_item_friends"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/navigation_item_friends" />
        <item
            android:id="@+id/navigation_item_discussion"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/navigation_item_discussion" />
    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/navigation_subheader">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_1"
                android:checkable="true"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/navigation_sub_item_1" />
            <item
                android:id="@+id/navigation_sub_item_2"
                android:checkable="true"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/navigation_sub_item_2" />
        </menu>
    </item>
</menu>